--- a/config-yml/views.view.digital_page_lister.yml
+++ b/config-yml/views.view.digital_page_lister.yml
@@ -1733,7 +1733,7 @@ display:
       exposed_form:
         type: input_required
         options:
-          submit_button: Search
+          submit_button: 'Search Fulltext'
           reset_button: true
           reset_button_label: Reset
           exposed_sorts_label: 'Sort by'
