--- a/config-yml/user.role.authenticated.yml
+++ b/config-yml/user.role.authenticated.yml
@@ -11,3 +11,5 @@ is_admin: false
 permissions:
   - 'access content'
   - 'use text format basic_html'
+  - 'view published serial issue entities'
+  - 'view published serial page entities'
