NBNP-69 Enable autocomplete for anon/auth users

--- a/config-yml/user.role.authenticated.yml
+++ b/config-yml/user.role.authenticated.yml
@@ -10,6 +10,7 @@ weight: 1
 is_admin: false
 permissions:
   - 'access content'
+  - 'use search_api_autocomplete for search'
   - 'use text format basic_html'
   - 'view published serial issue entities'
   - 'view published serial page entities'
