--- a/config-yml/user.role.anonymous.yml
+++ b/config-yml/user.role.anonymous.yml
@@ -10,6 +10,7 @@ weight: 0
 is_admin: false
 permissions:
   - 'access content'
+  - 'use search_api_autocomplete for search'
   - 'use text format restricted_html'
   - 'view published serial issue entities'
   - 'view published serial page entities'
