--- a/config-yml/block.block.exposedformdigital_page_listerpage_search.yml
+++ b/config-yml/block.block.exposedformdigital_page_listerpage_search.yml
@@ -24,6 +24,6 @@ settings:
 visibility:
   request_path:
     id: request_path
-    pages: "<front>\r\n/page-search*"
+    pages: '/page-search*'
     negate: false
     context_mapping: {  }
