--- a/config-yml/block.block.exposedformsearchsearch_page.yml
+++ b/config-yml/block.block.exposedformsearchsearch_page.yml
@@ -24,6 +24,6 @@ settings:
 visibility:
   request_path:
     id: request_path
-    pages: "<front>\r\n/search"
+    pages: /search
     negate: false
     context_mapping: {  }
