--- a/custom/modules/digital_serial/modules/digital_serial_title/digital_serial_title.routing.yml
+++ b/custom/modules/digital_serial/modules/digital_serial_title/digital_serial_title.routing.yml
@@ -5,3 +5,4 @@ digital_serial_title.digital_issues:
     _controller: '\Drupal\digital_serial_title\Controller\NewspaperPublicationDigitalTabRedirect::triageRequest'
   requirements:
     _custom_access: '\Drupal\digital_serial_title\Controller\NewspaperPublicationCheckController::checkAccess'
+    _permission: 'edit digital serial title entities'
