NBNP-83 Optimize breadcrumbs in search views

--- a/config-yml/views.view.digital_page_lister.yml
+++ b/config-yml/views.view.digital_page_lister.yml
@@ -1932,7 +1932,7 @@ display:
           quantity: 9
       cache:
         type: none
-      title: 'Search digital fulltext'
+      title: 'Search Fulltext in Pages'
       relationships: {  }
     cache_metadata:
       max-age: -1
