NBNP-107 Move front page CSS to new front search library

--- a/custom/modules/newspapers_core/newspapers_core.libraries.yml
+++ b/custom/modules/newspapers_core/newspapers_core.libraries.yml
@@ -8,6 +8,9 @@ pubform:
      - core/jquery
 
 tab-search:
+  css:
+    theme:
+      css/newspapers_core.tab_search.css: {}
   js:
     js/newspapers_core.tab_search.js: {}
   dependencies:
