--- a/config-yml/facets.facet.publication_year.yml
+++ b/config-yml/facets.facet.publication_year.yml
@@ -12,17 +12,20 @@ name: 'Publication Year'
 url_alias: publication_year
 weight: 0
 min_count: 1
-show_only_one_result: false
+show_only_one_result: true
 field_identifier: parent_issue_year
 facet_source_id: 'search_api:views_page__digital_page_lister__page_search'
 widget:
-  type: checkbox
+  type: range_slider
   config:
-    show_numbers: true
-    soft_limit: 0
-    soft_limit_settings:
-      show_less_label: 'Show less'
-      show_more_label: 'Show more'
+    show_numbers: false
+    prefix: ''
+    suffix: ''
+    min_type: search_result
+    min_value: !!float 0
+    max_type: search_result
+    max_value: !!float 10
+    step: !!float 1
 query_operator: or
 use_hierarchy: false
 expand_hierarchy: false
@@ -49,6 +52,23 @@ processor_configs:
       sort: 40
     settings:
       sort: ASC
+  hide_1_result_facet:
+    processor_id: hide_1_result_facet
+    weights:
+      build: 50
+    settings: {  }
+  hide_non_narrowing_result_processor:
+    processor_id: hide_non_narrowing_result_processor
+    weights:
+      build: 40
+    settings: {  }
+  range_slider:
+    processor_id: range_slider
+    weights:
+      pre_query: 60
+      post_query: 60
+      build: 20
+    settings: {  }
   url_processor_handler:
     processor_id: url_processor_handler
     weights:
