--- a/config-yml/block.block.publicationyear.yml
+++ b/config-yml/block.block.publicationyear.yml
@@ -12,14 +12,14 @@ dependencies:
 id: publicationyear
 theme: newspapers_lib_unb_ca
 region: sidebar_first
-weight: 0
+weight: -7
 provider: null
 plugin: 'facet_block:publication_year'
 settings:
   id: 'facet_block:publication_year'
   label: 'Publication Year'
   provider: facets
-  label_display: '0'
+  label_display: visible
   block_id: publicationyear
 visibility:
   request_path:
