--- a/config-yml/facets.facet.publication_years.yml
+++ b/config-yml/facets.facet.publication_years.yml
@@ -1,4 +1,4 @@
-uuid: be9393d7-c5c5-44fa-9f47-cb1e51b01e1a
+uuid: ec4ccb63-b04f-487b-a05d-a86f632517d2
 langcode: en
 status: true
 dependencies:
@@ -7,22 +7,25 @@ dependencies:
     - views.view.search
   module:
     - search_api
-id: last_issue_search_date
-name: 'Last Issue Date'
-url_alias: last_issue_search_date
+id: publication_years
+name: 'Publication Years'
+url_alias: publication_years
 weight: 0
 min_count: 1
-show_only_one_result: false
-field_identifier: field_last_issue_search_date
+show_only_one_result: true
+field_identifier: years_published
 facet_source_id: 'search_api:views_page__search__search_page'
 widget:
-  type: checkbox
+  type: range_slider
   config:
-    show_numbers: true
-    soft_limit: 10
-    soft_limit_settings:
-      show_less_label: 'Show less'
-      show_more_label: 'Show more'
+    show_numbers: false
+    prefix: ''
+    suffix: ''
+    min_type: search_result
+    min_value: !!float 0
+    max_type: search_result
+    max_value: !!float 10
+    step: !!float 1
 query_operator: or
 use_hierarchy: false
 expand_hierarchy: false
@@ -31,24 +34,40 @@ hard_limit: 0
 exclude: false
 only_visible_when_facet_source_is_visible: true
 processor_configs:
-  date_item:
-    processor_id: date_item
+  active_widget_order:
+    processor_id: active_widget_order
     weights:
-      build: 35
+      sort: 20
     settings:
-      date_display: actual_date
-      granularity: 6
-      date_format: ''
+      sort: DESC
+  count_widget_order:
+    processor_id: count_widget_order
+    weights:
+      sort: 30
+    settings:
+      sort: DESC
   display_value_widget_order:
     processor_id: display_value_widget_order
     weights:
       sort: 40
     settings:
-      sort: DESC
+      sort: ASC
+  hide_1_result_facet:
+    processor_id: hide_1_result_facet
+    weights:
+      build: 50
+    settings: {  }
   hide_non_narrowing_result_processor:
     processor_id: hide_non_narrowing_result_processor
     weights:
       build: 40
+    settings: {  }
+  range_slider:
+    processor_id: range_slider
+    weights:
+      pre_query: 60
+      post_query: 60
+      build: 20
     settings: {  }
   url_processor_handler:
     processor_id: url_processor_handler
