--- a/config-yml/block.block.publicationyears.yml
+++ b/config-yml/block.block.publicationyears.yml
@@ -19,7 +19,7 @@ settings:
   id: 'facet_block:publication_years'
   label: 'Year of Publication'
   provider: facets
-  label_display: visible
+  label_display: '0'
   block_id: publicationyears
 visibility:
   request_path:
