--- a/config-yml/block.block.publicationyear.yml
+++ b/config-yml/block.block.publicationyear.yml
@@ -19,7 +19,7 @@ settings:
   id: 'facet_block:publication_year'
   label: 'Publication Year'
   provider: facets
-  label_display: visible
+  label_display: '0'
   block_id: publicationyear
 visibility:
   request_path:
