--- a/custom/modules/newspapers_core/newspapers_core.services.yml
+++ b/custom/modules/newspapers_core/newspapers_core.services.yml
@@ -8,3 +8,8 @@ services:
     class: Drupal\newspapers_core\HomePageBreadcrumbBuilder
     tags:
     - { name: breadcrumb_builder, priority: 100 }
+
+  newspapers_core.search_breadcrumbs:
+    class: Drupal\newspapers_core\SearchViewsBreadcrumbBuilder
+    tags:
+    - { name: breadcrumb_builder, priority: 100 }
