Revert "NBNP-135 Catch up configuration with schema changes"
This reverts commit 9c07ec9e26d7bc171cbf34c08eac0b5b3b7102aa.

--- a/config-yml/serial_holding.taxonomy.serial_holding_types.default_terms.yml
+++ b/config-yml/serial_holding.taxonomy.serial_holding_types.default_terms.yml
@@ -3,8 +3,8 @@ status: true
 mode: default
 items:
   -
-    name: Physical
+    name: 'Physical'
   -
-    name: Microfilm
+    name: 'Microfilm'
   -
-    name: Digital
+    name: 'Digital'
