--- a/config-yml/search_api.index.solr_newspapers_lib_unb_ca.yml
+++ b/config-yml/search_api.index.solr_newspapers_lib_unb_ca.yml
@@ -274,7 +274,7 @@ field_settings:
     datasource_id: 'entity:node'
     property_path: title
     type: solr_text_ngram
-    boost: !!float 13
+    boost: !!float 8
     dependencies:
       module:
         - node
@@ -292,6 +292,11 @@ field_settings:
     label: 'Publication Years'
     property_path: years_published
     type: integer
+  years_published_fulltext:
+    label: 'Publication Years (Fulltext)'
+    property_path: years_published
+    type: text
+    boost: !!float 5
 datasource_settings:
   'entity:node':
     bundles:
