--- a/config-yml/user.role.authenticated.yml
+++ b/config-yml/user.role.authenticated.yml
@@ -12,5 +12,6 @@ permissions:
   - 'access content'
   - 'use search_api_autocomplete for search'
   - 'use text format basic_html'
+  - 'view published digital serial title entities'
   - 'view published serial issue entities'
   - 'view published serial page entities'
