--- a/custom/modules/digital_serial/modules/digital_serial_issue/digital_serial_issue.links.task.yml
+++ b/custom/modules/digital_serial/modules/digital_serial_issue/digital_serial_issue.links.task.yml
@@ -28,7 +28,7 @@ entity.digital_serial_issue.pages:
 
 digital_serial_issue.title_issues:
   route_name: digital_serial_issue.title_issues
-  title: 'Issues'
+  title: 'Manage Issues'
   base_route: entity.digital_serial_title.canonical
   weight: 150
 
